All functions that instantiates a form now in the model
There were some inside controllers before. Some other minor improvement to them (such as changing their names) were also made.

Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/views/scripts/index/unsigned.phtml
+++ b/application/views/scripts/index/unsigned.phtml
@@ -7,7 +7,7 @@ $config = $registry->get("config");
 $this->headTitle($config['applicationname'], "SET");
 
 $credential = Ml_Credential::getInstance();
-$this->loginform = $credential->_getLoginForm();
+$this->loginform = $credential->loginForm();
 ?>
 
 <div class="yui-ge">
