--- a/application/views/scripts/static/api.phtml
+++ b/application/views/scripts/static/api.phtml
@@ -47,7 +47,7 @@ You must know that <strong>method</strong> and <strong>method/</strong> (notice 
 <p>We use and assume that all transactions are made with the <b>utf-8</b> encoding. Don't send requests encoded in nothing else.<br /><br />
 Except for the /oauth/* methods, all other methods have two response formats. They are: <strong>xml</strong> and <strong>json</strong>.<br /><br />
 Both provide the same information. The json can be handful if you use Javascript and the <abbr title="Extensible Markup Language">XML</abbr> is easer for human reading and perhaps parsing too.<br /><br />
-This may be given as the <b>response_format</b> param. Possible values: xml (default), json.<br /><br />
+This may be given as the <b>responseformat</b> param. Possible values: xml (default), json.<br /><br />
 All response values must be considered as of a string type, regardless of their true nature, except for the pagination element.</p>
 
 <h3>Error responses</h3>
