--- a/application/views/scripts/filepage/filepage.phtml
+++ b/application/views/scripts/filepage/filepage.phtml
@@ -169,7 +169,7 @@ $this->twitterForm->getElement("tweet")->getDecorator("description")->setEscape(
 </ul>
 <?php
 if ($auth->getIdentity() == $userInfo['id']) {
-    echo Ml_Tags::_form()->setAttrib("id", "tags-form"); 
+    echo Ml_Tags::form()->setAttrib("id", "tags-form"); 
 }
 ?>
 <?php endif; ?>
