makes the code more easy to understand and fix 'Undefined variable' warnings in Eclipse
Not a problem, but a warning once the variables were set in file(s) that included or required these files. But fixing this is important for understanding what it is, organization, etc.

Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/layout/scripts/analytics.phtml
+++ b/application/layout/scripts/analytics.phtml
@@ -1,4 +1,7 @@
 <?php
+$registry = Zend_Registry::getInstance();
+$config = $registry->get("config");
+
 //should not use <?php echo var ?\> here or it will print it (wrong)
 //don't know why...
 if(APPLICATION_ENV == "production"):
