--- a/application/views/scripts/invites/index.phtml
+++ b/application/views/scripts/invites/index.phtml
@@ -1,4 +1,7 @@
 <?php
+$registry = Zend_Registry::getInstance();
+$config = $registry->get("config");
+
 $this->headTitle("Invites for the Plifk experience", "SET");
 ?>
 <?php
