--- a/application/views/scripts/join/email.phtml
+++ b/application/views/scripts/join/email.phtml
@@ -22,5 +22,6 @@ Terms of Service - http://<?php echo $this->escape($config['webhost']) ?><?php e
 Privacy Policy - http://<?php echo $this->escape($config['webhost']) ?><?php echo $this->staticUrl("/privacy") ?>
 
 -
-<?php echo $this->escape($config['applicationname']); ?>
-<?php echo $this->escape($config['webhost']);
+<?php
+echo $this->escape($config['applicationname']) . "\n"
+. $this->escape($config['webhost']);
