Fix bug in which Ml_Model_Credits was still as Ml_Credits in some parts of the code
Related to revision 7b1d922b3485fb1314f87eee432095b81e9316f1

Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/views/scripts/credits/info.phtml
+++ b/application/views/scripts/credits/info.phtml
@@ -2,7 +2,7 @@
 
 $registry = Zend_Registry::getInstance();
 
-$credits = Ml_Credits::getInstance();
+$credits = Ml_Model_Credits::getInstance();
 
 $signedUserInfo = $registry->get("signedUserInfo");
 
