--- a/application/views/scripts/error/error.phtml
+++ b/application/views/scripts/error/error.phtml
@@ -37,7 +37,7 @@ if ($this->statusCode == 404 && isset($_SERVER['REQUEST_URI'])) {
 <pre><?php echo var_export($this->request->getParams(), true); ?></pre>
 </div>
 <h3>Stack trace:</h3>
-<pre><?php echo str_replace(array(": ", "#"), array(":<br />   ", "<br />#"), $this->escape($this->exception->getTraceAsString())); ?>
+<pre><?php echo str_replace(array(": ", "#"), array(":<br />   ", "<br />#"), $this->escape($this->exception->getTraceAsString())); ?></pre>
 </div>
 <?php endif; ?>
 <h2><?php echo $headtitle; ?></h2>
