--- a/application/views/scripts/filepage/filepage.phtml
+++ b/application/views/scripts/filepage/filepage.phtml
@@ -59,7 +59,7 @@ $date = new Zend_Date(); $date->set($shareInfo['uploadedTime'], Zend_Date::ISO_8
 $shortlink = $this->escape(base58_encode($config['URLshortening']['addr'] . $shareInfo['id']));
 $metadata = array(
 "Filename" => $this->escape($shareInfo['filename']),
-"Size" => file_size($shareInfo['fileSize'], true),
+"Size" => $this->fileSize($shareInfo['fileSize'], true),
 "File-Type" => $this->escape($shareInfo['type']),
 "Published" => $date->get(Zend_Date::DATE_LONG),
 "Privacy" => "Public available",
