view helpers function / classes now in the correct case convention
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/layout/scripts/layout.phtml
+++ b/application/layout/scripts/layout.phtml
@@ -54,14 +54,14 @@ if ($registry->isRegistered("jsfiles")) {
 }
 
 if ($auth->hasIdentity()) {
-    $this->addjsvar("uid", $auth->getIdentity());
+    $this->addJsVar("uid", $auth->getIdentity());
 }
 
 if ($registry->isRegistered("globalHash")) {
-    $this->addjsvar("global_auth_hash", $registry->get("globalHash"));
+    $this->addJsVar("global_auth_hash", $registry->get("globalHash"));
 }
 
-$this->addjsvar("webroot", $config['webroot']);
+$this->addJsVar("webroot", $config['webroot']);
 
 //$this->headScript()->prependFile($this->staticversion("/javascript/plifk.js"));
 $this->headScript()->prependFile($this->staticUrl("/plifk.js"));
