fix bug of not finding Ml_Numbers model which caused errors across the system, renamed its class name to Ml_Model_Numbers in several files
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/views/scripts/filepage/filepage.phtml
+++ b/application/views/scripts/filepage/filepage.phtml
@@ -56,7 +56,7 @@ link and metadata</a>, </span><a href="#comments">comments</a>.
 	<tbody>
 <?php 
 $date = new Zend_Date(); $date->set($shareInfo['uploadedTime'], Zend_Date::ISO_8601);
-$shortlink = $this->escape(Ml_Numbers::base58Encode($config['URLshortening']['addr'] . $shareInfo['id']));
+$shortlink = $this->escape(Ml_Model_Numbers::base58Encode($config['URLshortening']['addr'] . $shareInfo['id']));
 $metadata = array(
 "Filename" => $this->escape($shareInfo['filename']),
 "Size" => $this->fileSize($shareInfo['fileSize'], true),
