the form call methods are now static
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/views/scripts/index/unsigned.phtml
+++ b/application/views/scripts/index/unsigned.phtml
@@ -6,8 +6,7 @@ $config = $registry->get("config");
 
 $this->headTitle($config['applicationname'], "SET");
 
-$credential = Ml_Model_Credential::getInstance();
-$this->loginform = $credential->loginForm();
+$this->loginform = Ml_Model_Credential::loginForm();
 ?>
 
 <div class="yui-ge">
