--- a/application/views/scripts/abuse/report.phtml
+++ b/application/views/scripts/abuse/report.phtml
@@ -2,7 +2,7 @@
 $this->headTitle("Report abuse");
 ?>
 <h2>Report abuse</h2>
-<p>Thank you for helping us to fight abuse.<br />
+<p>Thank you for helping us to fight abuse of our services.<br />
 <br />
 <?php
 if (! $this->reportDone) :
