--- a/application/views/scripts/shares/comments.phtml
+++ b/application/views/scripts/shares/comments.phtml
@@ -5,7 +5,6 @@ $registry = Zend_Registry::getInstance();
 $userInfo = $registry->get('userInfo');
 $shareInfo = $registry->get('shareInfo');
 
-$time = new Ml_Model_Time();
 ?>
 <div id="comments">
 <?php if ($this->paginator->getTotalItemCount()): ?>
@@ -32,8 +31,8 @@ echo $this->url(array("username" => $comment['people.alias']), "filestream_1stpa
 <?php echo $comment['comments_filtered']; ?></p>
 <p class="commentmeta"><small>
 <?php 
-$createdDate = $time->ago($comment['timestamp']);
-$modifiedDate = $time->ago($comment['lastModified']);
+$createdDate = Ml_Model_Time::ago($comment['timestamp']);
+$modifiedDate = Ml_Model_Time::ago($comment['lastModified']);
 ?>
 <?php echo $createdDate; ?> 
 <?php
