text modified from 'Remote logout' to 'Recent activity'
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/views/scripts/account/index.phtml
+++ b/application/views/scripts/account/index.phtml
@@ -20,9 +20,9 @@ $this->accountForm
 <br />
 <h4>More options</h4>
 <ul>
-<li><a href="<?php echo $this->url(array(), "accountapps") ?>">Applications</a></li>
-<li><b><a href="<?php echo$this->url(array(), "logout")?>?remote" id="remote_signout_link" rel="nofollow">Remote logout</a></b>: if you ever forget to logout from a public computer, use remote logout.</li>
-<li><a href="<?php echo$this->url(array(), "accountdelete")?>" rel="nofollow" class="warning">Delete your account</a></li>
+<li><a href="<?php echo $this->url(array(), "accountapps"); ?>">Applications</a></li>
+<li><a href="<?php echo $this->url(array(), "logout"); ?>" id="remote_signout_link" rel="nofollow">Recent activity</a></li>
+<li><a href="<?php echo $this->url(array(), "accountdelete"); ?>" rel="nofollow" class="warning">Delete your account</a></li>
 </ul>
 </div>
 <div class="yui-u accountside">
